# Dual_Arm

src/cv_skel_cam/: CMakeLists.txt  CMakeLists.txt.user.d32a7b9.21  mainpage.dox  package.xml
src/cv_skel_cam/include/cv_skel_cam/: main_window.hpp  qnode.hpp
src/cv_skel_cam/src/: main.cpp  main_window.cpp  qnode.cpp
src/cv_skel_cam/ui/: main_window.ui
src/ds4_control_kuro/: CMakeLists.txt  mainpage.dox  package.xml
src/ds4_control_kuro/include/ds4_control_kuro/: main_window.hpp  qnode.hpp
src/ds4_control_kuro/src/: main.cpp  main_window.cpp  qnode.cpp
src/ds4_control_kuro/ui/: main_window.ui
src/dynamixel_serial/: CMakeLists.txt  mainpage.dox  package.xml
src/dynamixel_serial/include/dynamixel_serial/: Rec_arm_id.h  main_window.hpp  qnode.hpp
src/dynamixel_serial/resources/: images.qrc
src/dynamixel_serial/src/: main.cpp  main_window.cpp  qnode.cpp
src/dynamixel_serial/ui/: main_window.ui
src/kuro/: CMakeLists.txt  package.xml
src/kuro/include/kuro/: angle.h
src/kuro/launch/: launch_kuro.launch
src/kuro/msg/: angle.msg
src/kuro/src/: kuro.cpp
src/kuro/worlds/: world_kuro.world
src/kuro_cotton_candy/: CMakeLists.txt  mainpage.dox  package.xml
src/kuro_cotton_candy/include/kuro_cotton_candy/: main_window.hpp  motion_name.h  qnode.hpp
src/kuro_cotton_candy/msg/: motion_name.msg
src/kuro_cotton_candy/src/: main.cpp  main_window.cpp  qnode.cpp
src/kuro_cotton_candy/ui/: main_window.ui
src/kuro_cotton_candy/work/: circle_motion
src/kuro_cotton_ui/: CMakeLists.txt  mainpage.dox  package.xml
src/kuro_cotton_ui/include/kuro_cotton_ui/: main_window.hpp  qnode.hpp
src/kuro_cotton_ui/src/: main.cpp  main_window.cpp  qnode.cpp
src/kuro_cotton_ui/ui/: main_window.ui
src/kuro_display/: CMakeLists.txt  mainpage.dox  package.xml
src/kuro_display/include/kuro_display/: main_window.hpp  qnode.hpp
src/kuro_display/src/: main.cpp  main_window.cpp  qnode.cpp
src/kuro_display/ui/: main_window.ui
src/kuro_display_ui/: CMakeLists.txt  mainpage.dox  package.xml
src/kuro_display_ui/include/kuro_display_ui/: main_window.hpp  qnode.hpp
src/kuro_display_ui/src/: main.cpp  main_window.cpp  qnode.cpp
src/kuro_display_ui/ui/: main_window.ui
src/kuro_master_ui/: CMakeLists.txt  mainpage.dox  package.xml
src/kuro_master_ui/include/kuro_master_ui/: main_window.hpp  qnode.hpp
src/kuro_master_ui/src/: main.cpp  main_window.cpp  qnode.cpp
src/kuro_master_ui/ui/: main_window.ui
src/kuro_video_ui/: CMakeLists.txt  mainpage.dox  package.xml
src/kuro_video_ui/include/kuro_video_ui/: main_window.hpp  qnode.hpp
src/kuro_video_ui/src/: main.cpp  main_window.cpp  qnode.cpp
src/kuro_video_ui/ui/: main_window.ui
src/move_DualArm/: CMakeLists.txt  CMakeLists.txt.user.21  CMakeLists.txt.user.44b6efa.4.8-pre1  package.xml
src/move_DualArm/include/move_DualArm/: angle.h  fk_loca.h  joint_state.h  kinematics.hpp  loca_order.h  move_DualArm.hpp  order.h  spline.hpp
src/move_DualArm/msg/: fk_loca.msg  joint_state.msg  runmove.msg
src/move_DualArm/src/: kinematics.cpp  move_DualArm.cpp  spline.cpp
src/move_DualArm/work/: Init_motion  circle_end_motion  circle_motion  circle_setting_motion  end_motion  first_init  motion_name_list  pour_motion  spin_motion  take_sugar_motion  temp_motion  test_01  test_02
src/msg_generate/: CMakeLists.txt  package.xml
src/msg_generate/msg/: Arm_path_coordinate_msg.msg  Arm_path_position_msg.msg  Motion_msg.msg  Step_msg.msg  angle2.msg  dxl_wheel_msg.msg  elbow_updown_msg.msg  eom_msg.msg  ik_msg.msg  ikcoordinate_msg.msg  ikend_msg.msg  imu_msg.msg  kuro_cotton_candy.msg  lcval_msg.msg  localization_msg.msg  pan_tilt_msg.msg  position_msg.msg  ps4.msg  ps4arm_msg.msg  robocupcontroller.msg  robocupvision.msg  support_onestep_msg.msg  test.msg  tune2walk.msg  udp_msg.msg  udp_order.msg  wheel_msg.msg  yaw_set.msg  zmp_msg.msg
src/order_kuro/: CMakeLists.txt  mainpage.dox  package.xml
src/order_kuro/include/order_kuro/: main_window.hpp  motion_name.h  qnode.hpp
src/order_kuro/msg/: Rec_arm_id.msg  loca_order.msg  order.msg
src/order_kuro/src/: main.cpp  main_window.cpp  qnode.cpp  qnode.cpp.autosave
src/order_kuro/ui/: main_window.ui
src/order_kuro/work/: Init_motion  circle_end_motion  circle_motion  circle_setting_motion  end_motion  first_init  pour_motion  spin_motion  take_sugar_motion  temp_motion  test  test_01  test_02
src/serial_mcu/: CMakeLists.txt  CMakeLists.txt.user.1007489  mainpage.dox  package.xml
src/serial_mcu/include/serial_mcu/: Motor_msg.h  Mt2Serial_msg.h  main_window.hpp  motion_end.h  motor_dxl.h  qnode.hpp  serial_msg.h
src/serial_mcu/msg/: Motor_msg.msg  Mt2Serial_msg.msg  motion_end.msg  serial_msg.msg
src/serial_mcu/src/: main.cpp  main_window.cpp  qnode.cpp
src/serial_mcu/ui/: main_window.ui
src/skeleton_message/: CMakeLists.txt  package.xml
src/skeleton_message/msg/: SkeletonJoint.msg  UserData.msg  Users.msg
